<?xml version="1.0" encoding="utf-8"?>
<resources>
    <integer name="waiting_list_sizes">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
    </integer>

    <integer name="sample_sizes">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>25</item>
        <item>50</item>
    </integer>
</resources>